--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,7 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 - task: PublishBuildArtifacts@1
+  inputs:
+    #pathToPublish: '$(Build.ArtifactStagingDirectory)' 
+    #artifactName: 'drop' 
+    #publishLocation: 'Container' # Options: container, filePat
