--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,6 @@ steps:
     configuration: '$(buildConfiguration)'
 - task: PublishBuildArtifacts@1
   inputs:
-    #pathToPublish: '$(Build.ArtifactStagingDirectory)' 
-    #artifactName: 'drop' 
-    #publishLocation: 'Container' # Options: container, filePat
+    pathToPublish: '$(Build.ArtifactStagingDirectory)' 
+    artifactName: 'drop' 
+    publishLocation: 'Container' # Options: container, filePat
